fix(dashboard): adjust grid gap and update media query layout for better responsiveness

--- a/frontend/ibudget/src/styles/_mixins.scss
+++ b/frontend/ibudget/src/styles/_mixins.scss
@@ -2,7 +2,7 @@
 @import "bootstrap/scss/variables";
 
 $page-margin-left: 100px;
-$background-color: #e9e9e9;
+$background-color: #E8E9EB;
 
 @mixin page-layout($padding: 10px, $page-height: 100%) {
   margin-left: $page-margin-left;
